--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body{
     align-items: center;
     height: 100vh;
 }
-
-.clicks{
-    color:#000000;
-    font-size: 50px;
+.new_game_button{
+    width: 280px;
+    height: 50px;
 }
