--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #922001;
+    
     margin:0;
     padding: 0;
     box-sizing: border-box;
@@ -7,7 +7,10 @@
     outline: none;
 }
 body{
-    background-color: #004400;
+    background-image:url(menubg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    
     display: flex;
     justify-content: center;
     align-items: center;
